// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`paridad de las listas de asignacion — esqueleto > R1 R27 — mis asignados, con ejecutar 1`] = `
"
div role=generic
  div role=status aria-busy="true" data-testid="assigned-orders-skeleton"
    span role=generic class="sr-only"
      "Cargando pedidos asignados…"
    div role=generic class="overflow-x-auto relative w-full"
      table role=table class="caption-bottom text-sm w-full"
        thead role=rowgroup class="[&_tr]:border-b bg-muted"
          tr role=row class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
        tbody role=rowgroup class="[&_tr:last-child]:border-0"
          tr role=row data-testid="assigned-order-row-skeleton" class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
          tr role=row data-testid="assigned-order-row-skeleton" class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
          tr role=row data-testid="assigned-order-row-skeleton" class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
"
`;

exports[`paridad de las listas de asignacion — esqueleto > R1 R27 — mis asignados, sin ejecutar 1`] = `
"
div role=generic
  div role=status aria-busy="true" data-testid="assigned-orders-skeleton"
    span role=generic class="sr-only"
      "Cargando pedidos asignados…"
    div role=generic class="overflow-x-auto relative w-full"
      table role=table class="caption-bottom text-sm w-full"
        thead role=rowgroup class="[&_tr]:border-b bg-muted"
          tr role=row class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
        tbody role=rowgroup class="[&_tr:last-child]:border-0"
          tr role=row data-testid="assigned-order-row-skeleton" class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
          tr role=row data-testid="assigned-order-row-skeleton" class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
          tr role=row data-testid="assigned-order-row-skeleton" class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
"
`;

exports[`paridad de las listas de asignacion — esqueleto > R1 R27 — por empacar 1`] = `
"
div role=generic
  div role=status aria-busy="true" data-testid="packing-orders-skeleton"
    span role=generic class="sr-only"
      "Cargando pedidos por empacar…"
    div role=generic class="overflow-x-auto relative w-full"
      table role=table class="caption-bottom text-sm w-full"
        thead role=rowgroup class="[&_tr]:border-b bg-muted"
          tr role=row class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
        tbody role=rowgroup class="[&_tr:last-child]:border-0"
          tr role=row data-testid="packing-order-row-skeleton" class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
          tr role=row data-testid="packing-order-row-skeleton" class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
          tr role=row data-testid="packing-order-row-skeleton" class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
"
`;

exports[`paridad de las listas de asignacion — esqueleto > R1 R27 — terminados 1`] = `
"
div role=generic
  div role=status aria-busy="true" data-testid="finished-orders-skeleton"
    span role=generic class="sr-only"
      "Cargando pedidos terminados…"
    div role=generic class="overflow-x-auto relative w-full"
      table role=table class="caption-bottom text-sm w-full"
        thead role=rowgroup class="[&_tr]:border-b bg-muted"
          tr role=row class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
        tbody role=rowgroup class="[&_tr:last-child]:border-0"
          tr role=row data-testid="finished-order-row-skeleton" class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
          tr role=row data-testid="finished-order-row-skeleton" class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
          tr role=row data-testid="finished-order-row-skeleton" class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
"
`;

exports[`paridad de las listas de asignacion — esqueleto > R1 R27 — todos 1`] = `
"
div role=generic
  div role=status aria-busy="true" data-testid="company-orders-skeleton"
    span role=generic class="sr-only"
      "Cargando pedidos…"
    div role=generic class="overflow-x-auto relative w-full"
      table role=table class="caption-bottom text-sm w-full"
        thead role=rowgroup class="[&_tr]:border-b bg-muted"
          tr role=row class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
        tbody role=rowgroup class="[&_tr:last-child]:border-0"
          tr role=row data-testid="company-order-row-skeleton" class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
          tr role=row data-testid="company-order-row-skeleton" class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
          tr role=row data-testid="company-order-row-skeleton" class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
"
`;

exports[`paridad de las listas de asignacion — esqueleto > R1 R27 — todos, con la fecha de entrega 1`] = `
"
div role=generic
  div role=status aria-busy="true" data-testid="company-orders-skeleton"
    span role=generic class="sr-only"
      "Cargando pedidos…"
    div role=generic class="overflow-x-auto relative w-full"
      table role=table class="caption-bottom text-sm w-full"
        thead role=rowgroup class="[&_tr]:border-b bg-muted"
          tr role=row class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            th role=columnheader class="[&:has([role=checkbox])]:pr-0 align-middle font-medium h-10 px-2 text-left text-muted-foreground whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
        tbody role=rowgroup class="[&_tr:last-child]:border-0"
          tr role=row data-testid="company-order-row-skeleton" class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
          tr role=row data-testid="company-order-row-skeleton" class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
          tr role=row data-testid="company-order-row-skeleton" class="border-b data-[state=selected]:bg-muted has-aria-expanded:bg-muted/50 hover:bg-muted/50 transition-colors"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
            td role=cell class="[&:has([role=checkbox])]:pr-0 align-middle p-2 whitespace-nowrap"
              div role=generic class="animate-pulse bg-muted h-4 rounded-md w-full"
"
`;

exports[`paridad de las listas de asignacion — vacio > R1 R27 — 'mis asignados', sin resultados con busqueda 1`] = `
"
div role=generic
  div role=generic data-testid="assigned-orders-empty" class="border border-dashed flex flex-col gap-3 items-center p-8 rounded-lg text-center"
    p role=paragraph data-testid="assigned-orders-empty-message" class="text-muted-foreground text-sm"
      "No tienes pedidos asignados en curso o pendientes."
"
`;

exports[`paridad de las listas de asignacion — vacio > R1 R27 — 'mis asignados', vacio 1`] = `
"
div role=generic
  div role=generic data-testid="assigned-orders-empty" class="border border-dashed flex flex-col gap-3 items-center p-8 rounded-lg text-center"
    p role=paragraph data-testid="assigned-orders-empty-message" class="text-muted-foreground text-sm"
      "No tienes pedidos asignados en curso o pendientes."
"
`;

exports[`paridad de las listas de asignacion — vacio > R1 R27 — 'mis asignados', vacio en una pagina posterior 1`] = `
"
div role=generic
  div role=generic data-testid="assigned-orders-empty" class="border border-dashed flex flex-col gap-3 items-center p-8 rounded-lg text-center"
    p role=paragraph data-testid="assigned-orders-empty-message" class="text-muted-foreground text-sm"
      "Esta página ya no tiene pedidos."
    a role=link name="Volver a la primera página" data-testid="assigned-orders-first-page" href="/asignacion?page=1&pageSize=10&vista=asignados" class="[&_svg:not([class*='size-'])]:size-4 [&_svg]:pointer-events-none [&_svg]:shrink-0 active:not-aria-[haspopup]:scale-[0.98] aria-expanded:bg-muted aria-expanded:text-foreground aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 bg-background bg-clip-padding border border-border btn-veil cursor-pointer dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 dark:bg-input/30 dark:border-input disabled:opacity-50 disabled:pointer-events-none focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-ring focus-visible:outline-solid font-medium gap-1.5 group/button h-9 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2 inline-flex items-center justify-center min-h-11 min-w-11 outline-none px-3.5 rounded-lg select-none shrink-0 text-sm transition-all whitespace-nowrap"
      "Volver a la primera página"
"
`;

exports[`paridad de las listas de asignacion — vacio > R1 R27 — 'por empacar', sin resultados con busqueda 1`] = `
"
div role=generic
  div role=generic data-testid="packing-orders-list-section"
    div role=generic class="border border-dashed flex flex-col gap-3 items-center p-8 rounded-lg text-center"
      p role=paragraph data-testid="packing-orders-empty-message" class="text-muted-foreground text-sm"
        "No hay pedidos por empacar en tu empresa."
"
`;

exports[`paridad de las listas de asignacion — vacio > R1 R27 — 'por empacar', vacio 1`] = `
"
div role=generic
  div role=generic data-testid="packing-orders-list-section"
    div role=generic class="border border-dashed flex flex-col gap-3 items-center p-8 rounded-lg text-center"
      p role=paragraph data-testid="packing-orders-empty-message" class="text-muted-foreground text-sm"
        "No hay pedidos por empacar en tu empresa."
"
`;

exports[`paridad de las listas de asignacion — vacio > R1 R27 — 'por empacar', vacio en una pagina posterior 1`] = `
"
div role=generic
  div role=generic data-testid="packing-orders-list-section"
    div role=generic class="border border-dashed flex flex-col gap-3 items-center p-8 rounded-lg text-center"
      p role=paragraph data-testid="packing-orders-empty-message" class="text-muted-foreground text-sm"
        "Esta página ya no tiene pedidos."
      a role=link name="Volver a la primera página" data-testid="packing-orders-first-page" href="/asignacion?page=1&pageSize=10&vista=por_empacar" class="[&_svg:not([class*='size-'])]:size-4 [&_svg]:pointer-events-none [&_svg]:shrink-0 active:not-aria-[haspopup]:scale-[0.98] aria-expanded:bg-muted aria-expanded:text-foreground aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 bg-background bg-clip-padding border border-border btn-veil cursor-pointer dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 dark:bg-input/30 dark:border-input disabled:opacity-50 disabled:pointer-events-none focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-ring focus-visible:outline-solid font-medium gap-1.5 group/button h-9 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2 inline-flex items-center justify-center min-h-11 min-w-11 outline-none px-3.5 rounded-lg select-none shrink-0 text-sm transition-all whitespace-nowrap"
        "Volver a la primera página"
"
`;

exports[`paridad de las listas de asignacion — vacio > R1 R27 — 'terminados', sin resultados con busqueda 1`] = `
"
div role=generic
  div role=generic data-testid="finished-orders-list-section"
    div role=generic data-testid="finished-orders-empty" class="border border-dashed flex flex-col gap-3 items-center p-8 rounded-lg text-center"
      p role=paragraph data-testid="finished-orders-empty-message" class="text-muted-foreground text-sm"
        "No hay pedidos terminados en tu empresa."
"
`;

exports[`paridad de las listas de asignacion — vacio > R1 R27 — 'terminados', vacio 1`] = `
"
div role=generic
  div role=generic data-testid="finished-orders-list-section"
    div role=generic data-testid="finished-orders-empty" class="border border-dashed flex flex-col gap-3 items-center p-8 rounded-lg text-center"
      p role=paragraph data-testid="finished-orders-empty-message" class="text-muted-foreground text-sm"
        "No hay pedidos terminados en tu empresa."
"
`;

exports[`paridad de las listas de asignacion — vacio > R1 R27 — 'terminados', vacio en una pagina posterior 1`] = `
"
div role=generic
  div role=generic data-testid="finished-orders-list-section"
    div role=generic data-testid="finished-orders-empty" class="border border-dashed flex flex-col gap-3 items-center p-8 rounded-lg text-center"
      p role=paragraph data-testid="finished-orders-empty-message" class="text-muted-foreground text-sm"
        "Esta página ya no tiene pedidos."
      a role=link name="Volver a la primera página" data-testid="finished-orders-first-page" href="/asignacion?page=1&pageSize=10&vista=terminados" class="[&_svg:not([class*='size-'])]:size-4 [&_svg]:pointer-events-none [&_svg]:shrink-0 active:not-aria-[haspopup]:scale-[0.98] aria-expanded:bg-muted aria-expanded:text-foreground aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 bg-background bg-clip-padding border border-border btn-veil cursor-pointer dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 dark:bg-input/30 dark:border-input disabled:opacity-50 disabled:pointer-events-none focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-ring focus-visible:outline-solid font-medium gap-1.5 group/button h-9 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2 inline-flex items-center justify-center min-h-11 min-w-11 outline-none px-3.5 rounded-lg select-none shrink-0 text-sm transition-all whitespace-nowrap"
        "Volver a la primera página"
"
`;

exports[`paridad de las listas de asignacion — vacio > R1 R27 — 'todos', sin resultados con busqueda 1`] = `
"
div role=generic
  div role=generic data-testid="company-orders-list-section"
    div role=generic data-testid="company-orders-empty" class="border border-dashed flex flex-col gap-3 items-center p-8 rounded-lg text-center"
      p role=paragraph data-testid="company-orders-empty-message" class="text-muted-foreground text-sm"
        "No hay pedidos que mostrar con este filtro."
"
`;

exports[`paridad de las listas de asignacion — vacio > R1 R27 — 'todos', vacio 1`] = `
"
div role=generic
  div role=generic data-testid="company-orders-list-section"
    div role=generic data-testid="company-orders-empty" class="border border-dashed flex flex-col gap-3 items-center p-8 rounded-lg text-center"
      p role=paragraph data-testid="company-orders-empty-message" class="text-muted-foreground text-sm"
        "No hay pedidos que mostrar con este filtro."
"
`;

exports[`paridad de las listas de asignacion — vacio > R1 R27 — 'todos', vacio en una pagina posterior 1`] = `
"
div role=generic
  div role=generic data-testid="company-orders-list-section"
    div role=generic data-testid="company-orders-empty" class="border border-dashed flex flex-col gap-3 items-center p-8 rounded-lg text-center"
      p role=paragraph data-testid="company-orders-empty-message" class="text-muted-foreground text-sm"
        "Esta página ya no tiene pedidos."
      a role=link name="Volver a la primera página" data-testid="company-orders-first-page" href="/asignacion?page=1&pageSize=10&vista=todos" class="[&_svg:not([class*='size-'])]:size-4 [&_svg]:pointer-events-none [&_svg]:shrink-0 active:not-aria-[haspopup]:scale-[0.98] aria-expanded:bg-muted aria-expanded:text-foreground aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 bg-background bg-clip-padding border border-border btn-veil cursor-pointer dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 dark:bg-input/30 dark:border-input disabled:opacity-50 disabled:pointer-events-none focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-ring focus-visible:outline-solid font-medium gap-1.5 group/button h-9 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2 inline-flex items-center justify-center min-h-11 min-w-11 outline-none px-3.5 rounded-lg select-none shrink-0 text-sm transition-all whitespace-nowrap"
        "Volver a la primera página"
"
`;

exports[`paridad de las listas de asignacion — vacio > R1 R27 — todos, vacio con el filtro de entregados 1`] = `
"
div role=generic
  div role=generic data-testid="company-orders-list-section"
    div role=generic data-testid="company-orders-empty" class="border border-dashed flex flex-col gap-3 items-center p-8 rounded-lg text-center"
      p role=paragraph data-testid="company-orders-empty-message" class="text-muted-foreground text-sm"
        "No hay pedidos que mostrar con este filtro."
"
`;
